eletron/check_output.txt
STATUS:1
STDERR:D:\code\manbo\_tmp_check.js:37
function buildCarSubTabs(tab,abnCount){var r="";r+="<div style=\"display:flex;align-items:center;gap:12px;margin-bottom:16px\">";r+="<div style=\"display:flex;background:var(--white);border-radius:10px;border:1px solid var(--border);overflow:hidden;flex:1\">";r+="<div onclick=\"S.carTab=\\'records\\';loadCar()\" style=\"flex:1;text-align:center;padding:12px;cursor:pointer;font-size:14px;";r+=tab==="records"?"background:var(--blue);color:white;font-weight:bold":"background:var(--white);color:var(--text-sec)";r+=\"\">🚗 全部记录</div>";r+="<div onclick=\"S.carTab=\\'abnormal\\';loadCar()\" style=\"flex:1;text-align:center;padding:12px;cursor:pointer;font-size:14px;";r+=tab==="abnormal"?"background:var(--red);color:white;font-weight:bold":"background:var(--white);color:var(--text-sec)";r+=\"\">⚠ 异常记录";if(abnCount>0)r+=" <span style=\"background:rgba(255,255,255,0.3);border-radius:10px;padding:1px 7px;font-size:11px;margin-left:4px\">"+abnCount+"</span>";r+="</div></div></div>";return r}
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1787:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.16.0

STDOUT: